tests/ui/proc-macro/issue-83510.stderr
error[E0412]: cannot find type `Foo` in this scope
  --> $DIR/issue-83510.rs:5:1
   |
LL | issue_83510::dance_like_you_want_to_ice!();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
   = note: this error originates in the macro `issue_83510::dance_like_you_want_to_ice` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0404]: expected trait, found struct `Box`
  --> $DIR/issue-83510.rs:5:1
   |
LL | issue_83510::dance_like_you_want_to_ice!();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not a trait
   |
   = note: this error originates in the macro `issue_83510::dance_like_you_want_to_ice` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0405]: cannot find trait `Baz` in this scope
  --> $DIR/issue-83510.rs:5:1
   |
LL | issue_83510::dance_like_you_want_to_ice!();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
   = note: this error originates in the macro `issue_83510::dance_like_you_want_to_ice` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: inherent associated types are unstable
  --> $DIR/issue-83510.rs:5:1
   |
LL | issue_83510::dance_like_you_want_to_ice!();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #8995 <https://github.com/rust-lang/rust/issues/8995> for more information
   = help: add `#![feature(inherent_associated_types)]` to the crate attributes to enable
   = note: this error originates in the macro `issue_83510::dance_like_you_want_to_ice` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0404, E0405, E0412, E0658.
For more information about an error, try `rustc --explain E0404`.
